# Nmap Changelog ($Id$); -*-text-*-

o [NSE][GH#369] New script: coap-resources grabs the list of available
  resources from CoAP endpoints. [Mak Kolybabi]

o [NSE] New script: ipmi-version retrieves protocol version and authentication
  options from ASF-RMCP (IPMI) services. [Claudiu Perta]

o [NSE] New script: ipmi-cipher-zero checks IPMI services for Cipher Zero
  support, which allows connection without a password. [Claudiu Perta]

o [NSE] New script: ipmi-brute performs authentication brute-forcing on IPMI
  services. [Claudiu Perta]

o [NSE][GH#352] New script: mqtt-subscribe connects to a MQTT broker, subscribes to
  topics, and lists the messages received. [Mak Kolybabi]

o [NSE] New script: fox-info retrieves detailed version and configuration info
  from Tridium Niagara Fox services. [Stephen Hilt]

o New service probe and match lines for PCWorx, ProConOS, and Tridium Fox,
  based on work by Stephen Hilt of Digital Bond.

o [NSE] New script: pcworx-info retrieves PLC model, firmware version, and date
  from Phoenix Contact PLCs. [Stephen Hilt]

Nmap 7.25BETA2 [2016-09-01]

o [GH#376] Windows binaries are now code-signed with our "Insecure.Com LLC"
  SHA256 certificate. This should give our users extra peace-of-mind and avoid
  triggering Microsoft's ever-increasing security warnings.

o [NSE] Upgraded NSE to Lua 5.3, adding bitwise operators, integer data type, a
  utf8 library, and native binary packing and unpacking functions. Removed bit
  library, added bits.lua, replaced base32, base64, and bin libraries. [Patrick
  Donnelly]

o [NSE] Added 2 NSE scripts, bringing the total up to 534!  They are both listed
  at https://nmap.org/nsedoc/, and the summaries are below:

  + oracle-tns-version decodes the version number from Oracle Database Server's
    TNS listener. [Daniel Miller]

  + clock-skew analyzes and reports clock skew between Nmap and services that
    report timestamps, grouping hosts with similar skews. [Daniel Miller]
